# ros2_building_babybot

./: README.md  ros2-humble-base-main.sh
babybot_controller/: CMakeLists.txt  package.xml
babybot_controller/babybot_controller/: simple_controller.py
babybot_controller/config/: babybot_controllers.yaml  joy_config.yaml  joy_teleop_diffdrive.yaml  joy_teleop_simple.yaml  rplidar_a1.yaml.yaml
babybot_controller/launch/: diffdrive_controller.launch.py  joystick_teleop.launch.py  simple_controller.launch.py
babybot_description/: CMakeLists.txt  package.xml
babybot_description/launch/: display.launch.py  gazebo.launch.py
babybot_description/rviz/: display.rviz  real_robot.rviz  robot_control.rviz
babybot_description/urdf/: babybot.urdf.xacro  babybot_gazebo.xacro  babybot_ros2_control.xacro
babybot_firmware/: CMakeLists.txt  babybot_interface.xml  package.xml
babybot_firmware/babybot_firmware/: mpu6050_driver.py
babybot_firmware/include/babybot_firmware/: babybot_interface.hpp
babybot_firmware/launch/: babybot_interface.launch.py  real_robot.launch.py  real_robot_no_imu_lidar.launch.py
babybot_firmware/src/: babybot_interface.cpp
