<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>babybot_description</name>
  <version>1.0.0</version>
  <description>babybot description</description>
  <maintainer email="agenticautomation88@gmail.com">twm</maintainer>
  <license>Agentic Automation Pte. Ltd.</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
